[gd_scene load_steps=7 format=2]

[ext_resource path="res://1939_nimatron/components/sabt/sabt.gd" type="Script" id=1]
[ext_resource path="res://1939_nimatron/components/sabt/atlases/sath.tres" type="Texture" id=2]
[ext_resource path="res://1939_nimatron/components/sabt/atlases/saye_bala.tres" type="Texture" id=3]
[ext_resource path="res://1939_nimatron/components/sabt/atlases/saye_vasat.tres" type="Texture" id=4]
[ext_resource path="res://1939_nimatron/components/sabt/atlases/saye_payin.tres" type="Texture" id=5]
[ext_resource path="res://1939_nimatron/components/sabt/painter.gd" type="Script" id=6]

[node name="Sabt" type="TouchScreenButton"]
self_modulate = Color( 1, 1, 1, 0 )
normal = ExtResource( 2 )
script = ExtResource( 1 )

[node name="SayeBala" type="Sprite" parent="."]
modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 3 )
centered = false

[node name="Sath" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="SayeVasat" type="Sprite" parent="."]
modulate = Color( 0.76, 0.76, 0.76, 1 )
texture = ExtResource( 4 )
centered = false

[node name="SayePayin" type="Sprite" parent="."]
modulate = Color( 0.5, 0.5, 0.5, 1 )
texture = ExtResource( 5 )
centered = false

[node name="Painter" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="pressed" from="." to="." method="_on_Sabt_pressed"]
[connection signal="released" from="." to="." method="_on_Sabt_released"]
